# Convert_Julian_day

./: .gitignore  README.md  muqy_20220519_Convert_Julian_day.py  pyproject.toml  setup.cfg
src/convert_julian_day/: __init__.py  cli.py  julian_day.py
tests/: conftest.py  test_julian_day.py
